@@ -26,12 +26,41 @@ def main(argv):
     return ret
 
 class List(logcommand.LogCommand):
+    summary = "list all open things, ordered by priority."
+
     def do(self, args):
         from things.model import couch
         server = couch.Server()
         count = 0
+        # FIXME: make the view calculate and sort by priority
         for thing in server.view('open-things'):
-            print 'U:%s I:%s %s' % (thing.urgency or '?', thing.importance or '?', thing.description)
+            # FIXME: colorize
+            blocks = []
+            blocks.append('%s:(%.2f)' % (thing.id[:4], thing.priority()))
+            blocks.append(thing.title)
+
+            if thing.contexts:
+                blocks.extend(['@%s' % c for c in thing.contexts]) 
+            if thing.projects:
+                blocks.extend(['p:%s' % p for p in thing.projects]) 
+            if thing.statuses:
+                blocks.extend(['!%s' % s for s in thing.statuses]) 
+
+            if thing.urgency is not None:
+                blocks.append('U:%d' % thing.urgency)
+            if thing.importance is not None:
+                blocks.append('I:%d' % thing.importance)
+
+            # FIXME: format with H/M/S/...
+            if thing.time is not None:
+                blocks.append('T:%d' % thing.time)
+
+            if thing.start is not None:
+                blocks.append('S:%s' % thing.start.strftime('%Y-%m-%d'))
+            if thing.due is not None:
+                blocks.append('D:%s' % thing.due.strftime('%Y-%m-%d'))
+
+            print " ".join(blocks)
             count += 1
 
         print '%d open things' % count
